# storage/api-docs/api-docs.json
@@ -606,7 +606,7 @@
                 },
                 "responses": {
                     "200": {
-                        "description": "Successful disabled with JWT token",
+                        "description": "Successful create live tv",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -783,6 +783,345 @@
                 "summary": "Delete Live TV (api mới, cần check lại nghiệp vụ)",
                 "description": "Delete Live TV",
                 "operationId": "deleteLiveTV",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "query",
+                        "description": "id",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "code": {
+                                            "type": "string"
+                                        },
+                                        "error": {
+                                            "type": "string"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/live/radio": {
+            "get": {
+                "tags": [
+                    "Others"
+                ],
+                "summary": "Radio Broadcast Schedule",
+                "description": "Radio Broadcast Schedule",
+                "operationId": "LiveRadio",
+                "parameters": [
+                    {
+                        "name": "date",
+                        "in": "query",
+                        "description": "Day",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "code": {
+                                            "type": "string"
+                                        },
+                                        "error": {
+                                            "type": "string"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "live_url": {
+                                                        "type": "string"
+                                                    },
+                                                    "playback_url": {
+                                                        "type": "string"
+                                                    },
+                                                    "list": {
+                                                        "type": "string"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/live/radio/create": {
+            "post": {
+                "tags": [
+                    "Others"
+                ],
+                "summary": "Create Live Radio (api mới, cần check lại nghiệp vụ)",
+                "description": "Create Live Radio",
+                "operationId": "createLiveRadio",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "ngay",
+                                    "time",
+                                    "title",
+                                    "youtubeid",
+                                    "url_mp4",
+                                    "duration"
+                                ],
+                                "properties": {
+                                    "ngay": {
+                                        "type": "string",
+                                        "format": "string",
+                                        "example": "17/01/2025"
+                                    },
+                                    "time": {
+                                        "type": "string",
+                                        "format": "text",
+                                        "example": "15:00"
+                                    },
+                                    "title": {
+                                        "type": "string",
+                                        "format": "text"
+                                    },
+                                    "youtubeid": {
+                                        "type": "string",
+                                        "format": "text"
+                                    },
+                                    "timecode": {
+                                        "type": "string",
+                                        "format": "text",
+                                        "example": "17/01/2025 15:00:24"
+                                    },
+                                    "url_mp4": {
+                                        "type": "string",
+                                        "format": "text"
+                                    },
+                                    "duration": {
+                                        "type": "string",
+                                        "format": "text"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful create live radio",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "string"
+                                                    },
+                                                    "time": {
+                                                        "type": "string"
+                                                    },
+                                                    "title": {
+                                                        "type": "string"
+                                                    },
+                                                    "playliststart": {
+                                                        "type": "string"
+                                                    },
+                                                    "duration": {
+                                                        "type": "string"
+                                                    },
+                                                    "milisecon": {
+                                                        "type": "string"
+                                                    },
+                                                    "timecode": {
+                                                        "type": "string"
+                                                    },
+                                                    "youtubeid": {
+                                                        "type": "string"
+                                                    },
+                                                    "url_mp4": {
+                                                        "type": "string"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/live/radio/update": {
+            "post": {
+                "tags": [
+                    "Others"
+                ],
+                "summary": "Update Live Radio (api mới, cần check lại nghiệp vụ)",
+                "description": "Update Live Radio",
+                "operationId": "updateLiveRadio",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "id",
+                                    "ngay",
+                                    "time",
+                                    "title",
+                                    "youtubeid",
+                                    "url_mp4",
+                                    "duration"
+                                ],
+                                "properties": {
+                                    "id": {
+                                        "type": "string",
+                                        "format": "text"
+                                    },
+                                    "ngay": {
+                                        "type": "string",
+                                        "format": "text",
+                                        "example": "17/01/2025"
+                                    },
+                                    "time": {
+                                        "type": "string",
+                                        "format": "text"
+                                    },
+                                    "title": {
+                                        "type": "string",
+                                        "format": "text"
+                                    },
+                                    "youtubeid": {
+                                        "type": "string",
+                                        "format": "text"
+                                    },
+                                    "url_mp4": {
+                                        "type": "string",
+                                        "format": "text"
+                                    },
+                                    "timecode": {
+                                        "type": "string",
+                                        "format": "text",
+                                        "example": "17/01/2025 15:00:24"
+                                    },
+                                    "duration": {
+                                        "type": "string",
+                                        "format": "text"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful updated live radio",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string"
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "string"
+                                                    },
+                                                    "time": {
+                                                        "type": "string"
+                                                    },
+                                                    "title": {
+                                                        "type": "string"
+                                                    },
+                                                    "playliststart": {
+                                                        "type": "string"
+                                                    },
+                                                    "duration": {
+                                                        "type": "string"
+                                                    },
+                                                    "milisecon": {
+                                                        "type": "string"
+                                                    },
+                                                    "timecode": {
+                                                        "type": "string"
+                                                    },
+                                                    "youtubeid": {
+                                                        "type": "string"
+                                                    },
+                                                    "url_mp4": {
+                                                        "type": "string"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/live/radio/delete": {
+            "delete": {
+                "tags": [
+                    "Others"
+                ],
+                "summary": "Delete Live Radio (api mới, cần check lại nghiệp vụ)",
+                "description": "Delete Live Radio",
+                "operationId": "deleteLiveRadio",
                 "parameters": [
                     {
                         "name": "id",
